small fixes and swagger done
